# SNN_Agent

./: .gitignore  README.md  SYSTEM_SUMMARY.md  debug_hat.txt  main.py  pyproject.toml  requirements.txt  test_forward.py  tmp_out.txt
.github/workflows/: ci.yml
dataset/: README.txt  info.labels  move_dataset.ipynb
dataset/training/: info.labels
decoder/: 02_decoder.py
docs/: BOM.md  TESTING.md  backplane_design.md  spi_protocol.md  synapse_design.md
encoder/: ENCODER_PLAN.md  README.md  datasets.md  python_mock.py
encoder/encoder_arudino/: encoder_arudino.ino
encoder/snn_decoder/: snn_decoder.ino
encoder/snn_encoder/: snn_encoder.ino
encoder/snn_encoder_test/: snn_encoder_test.ino
encoder/spike_output/: dog.txt  door.txt  glass.txt  silence.txt  wnioski.md
experiments/: README.md  decoder.py  encoder.ino  encoder.py  encoder_arduino.ino  encoder_sim.py
infra/dockerfiles/: backend.Dockerfile  frontend.Dockerfile
notebooks/: hardware_weights.json  hat_training.ipynb  microphone_nb.ipynb  snn_simulation.ipynb
rag/: .gitignore  requirements.txt
snn_pipeline/: __init__.py  config.py  data_pipeline.py  e24_quantizer.py  evaluation.py  export.py  hat_trainer.py  hil_validation.py  losses.py  metrics.py  qat_trainer.py  run_pipeline.py  sensitivity.py  snn_model.py  spike_encoders.py
software/host_agent/: .gitignore  run.py
software/host_agent/rag/: ingest.py  query.py
software/infra/: docker-compose.yml
software/web_dashboard/api/: app.py
tests/: neuron_characterization_20260322.md  test_decoder.py
